# CI2024_lab2

./: README.md  notes.py  pyproject.toml  tsp.ipynb  tsp_ea.py  tsp_greedy.py
