[tool.poetry]
name = "ci2024-lab2"
version = "0.1.0"
description = ""
authors = ["Daviruss1969 <lukasloiodic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
icecream = "^2.1.3"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
